# app/controllers/api/v1/auth/me_controller.rb
@@ -1,0 +1,13 @@
+# frozen_string_literal: true
+
+module Api
+  module V1
+    module Auth
+      class MeController < AuthenticatedController
+        def show
+          render json: current_user.as_api_json, status: :ok
+        end
+      end
+    end
+  end
+end
