# config/routes.rb
@@ -1,6 +1,7 @@
 Rails.application.routes.draw do
   namespace :api do
     namespace :v1 do
+      get "auth/me", to: "auth/me#show"
       post "auth/login", to: "auth/sessions#create"
       post "auth/register", to: "auth/registrations#create"
       post "auth/recover-password", to: "auth/passwords#recover"
